@@ -1,5 +1,9 @@
 2001-11-02  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
+	* faq.ht: New FAQ entry: "I use BBDB, and every time it sees a new
+	'dated' address it asks me whether I want it added to so-and-so's
+	BBDB record. How can I prevent this?"
+
 	* config-pre.ht (suffix): Clarify `suffix =' Exim syntax.
 
 2001-11-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
